# chicane-editor

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Content/: CMakeLists.txt
Content/CubeMaps/: Gray.bcmp  Lake.bcmp
Content/Meshes/: AirCraft.bmsh  Air_Craft.box  Aircraft.box  Apple.bmsh  Cube.bmsh  Cube.box
Content/Models/: Cube.bmdl  Cube.box  Skybox.bmdl
Content/Shaders/: CMakeLists.txt  grid.frag  grid.vert
Content/Skies/: Black.bsky  Gray.bsky
Content/Textures/: Apple.btex  Gray.btex  SKY_Gray.box
Content/Textures/Material/: Gray.box
Content/Textures/Skybox/: Gray.box
Content/View/: Home.decal  Home.grid
Content/Views/: Home.decal  Home.grid
Includes/: Camera.hpp  Editor.hpp  Layer.hpp  View.hpp
Source/: Base.hpp  Camera.cpp  Camera.hpp  Editor.cpp  Editor.hpp  Layer.cpp  Layer.hpp  Main.cpp  View.cpp  View.hpp
Source/Actor/: Character.cpp  Character.hpp  Mesh.cpp  Mesh.hpp
Source/Layer/: Grid.cpp  Grid.hpp
Source/UI/View/: Home.cpp  Home.hpp
Sources/: Base.hpp  Camera.cpp  Camera.hpp  Editor.cpp  Layer.cpp  Main.cpp  View.cpp
